--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
-  <head><title>BugSpiral</title></head>
+  <head>
+    <title>BugSpiral</title>
+    <meta charset="UTF-8" />
+  </head>
   <body>
     <h1>Welcome to BugSpiral</h1>
     <p>All hand-coded. No hosting.</p>
