--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>BugSpiral</title>
-    <meta charset="UTF-8" />
-  </head>
+  <head><title>BugSpiral</title></head>
   <body>
     <h1>Welcome to BugSpiral</h1>
     <p>All hand-coded. No hosting.</p>
