--- a/index.html
+++ b/index.html
@@ -1,8 +1,25 @@
 <!DOCTYPE html>
 <html>
-  <head><title>BugSpiral</title></head>
+  <head>
+    <title>BUGSPIRAL</title>
+    <style>
+      body {
+        background-color: black;
+        color: lime;
+        font-family: monospace;
+        text-align: center;
+        padding-top: 100px;
+      }
+      a {
+        color: cyan;
+        text-decoration: none;
+        font-size: 20px;
+      }
+    </style>
+  </head>
   <body>
-    <h1>Welcome to BugSpiral</h1>
-    <p>All hand-coded. No hosting.</p>
+    <h1> We do divore proceedings </h1>
+    <p>you are in HELL now.</p>
+    <p><a href="#">[ENTER]</a></p>
   </body>
 </html>
