Add deep link and styling

--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
   <body>
     <h1> We do divore proceedings </h1>
     <p>you are in HELL now.</p>
-    <p><a href="#">[ENTER]</a></p>
+    <a href="deep.html">[ENTER]</a>
   </body>
 </html>
