--- a/deep.html
+++ b/deep.html
@@ -1,23 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>DEEPER IN</title>
-  <style>
-    body {
-      background-color: rgb(255, 0, 0);
-      color: rgb(0, 55, 255);
-      font-family: monospace;
-      text-align: center;
-      padding-top: 100px;
-    }
-    h1 {
-      text-shadow: 0 0 10px rgb(13, 255, 0);
-    }
-  </style>
+  <title>BugSpiral - SubSpiral</title>
 </head>
-<body>
-  <h1>HAVE YOU BEEN IN A CAR WRECK???</h1>
-  <p>good.</p>
-  <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.business-standard.com%2Fworld-news%2Ftrump-musk-ai-video-hud-govt-office-viral-outrage-influence-debate-125022500400_1.html&psig=AOvVaw00VVMaOLdHUjTyfUVCusxI&ust=1751388864976000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCPDQnJLOmY4DFQAAAAAdAAAAABAL" width="300">
+<body style="font-family:monospace; background:#111; color:#0f0;">
+  <h1>SubSpiral</h1>
+  <p>BEEN INJURED IN A CAR WRECK???.</p>
+
+  <p>
+    <a href="page2.html" style="color:#0f0;">← Back to Page 2</a>
+  </p>
 </body>
 </html>
