--- a/deep.html
+++ b/deep.html
@@ -6,9 +6,10 @@
 <body style="font-family:monospace; background:#111; color:#0f0;">
   <h1>SubSpiral</h1>
   <p>BEEN INJURED IN A CAR WRECK???.</p>
+  <p>good.</p>
 
   <p>
-    <a href="page2.html" style="color:#0f0;">← Back to Page 2</a>
+    <a href="deep.html" style="color:rgb(72, 0, 255);">← Back </a>
   </p>
 </body>
 </html>
