--- a/blackpeople2.html
+++ b/blackpeople2.html
@@ -8,8 +8,8 @@
   <p>GOD IS COMING</p>
 
   <p>
-    <a href="page1.html" style="color:rgb(68, 84, 85);">← Back</a> |
-    <a href="page3.html" style="color:rgb(76, 0, 255);">Next →</a>
+    <a href="node1.html" style="color:rgb(68, 84, 85);">← Back</a> |
+    <a href="index.html" style="color:rgb(76, 0, 255);">Next →</a>
   </p>
 </body>
 </html>
