--- a/Blackpeople.html
+++ b/Blackpeople.html
@@ -8,7 +8,7 @@
   <p>Grandma was butt naked but now even more for she and you will unite as one now. look outside her car is outside.</p>
   
   <p>
-    <a href="page2.html" style="color:rgb(229, 255, 0);">Next →</a>
+    <a href="blackpeople2.html" style="color:rgb(229, 255, 0);">Next →</a>
   </p>
 </body>
 </html>
