--- a/deep.html
+++ b/deep.html
@@ -9,7 +9,7 @@
   <p>good.</p>
 
   <p>
-    <a href="deep.html" style="color:rgb(72, 0, 255);">← Back </a>
+    <a href="node1.html" style="color:rgb(72, 0, 255);">← Back </a>
   </p>
 </body>
 </html>
