--- a/BUGSPIRAL1/deep.html
+++ b/BUGSPIRAL1/deep.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>BugSpiral - SubSpiral</title>
+  <title>BugSpiral</title>
 </head>
 <body style="font-family:monospace; background:#111; color:#0f0;">
   <h1>SubSpiral</h1>
@@ -10,6 +10,12 @@
 
   <p>
     <a href="node1.html" style="color:rgb(72, 0, 255);">← Back </a>
+  </p>
+</body>
+</html>
+
+  <p>
+    <a href="blackpeople2.html" style="color:rgb(255, 221, 0);">← Tell Me More! </a>
   </p>
 </body>
 </html>
