--- a/BUGSPIRAL1/index.html
+++ b/BUGSPIRAL1/index.html
@@ -1,25 +1,71 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>BUGSPIRAL</title>
-    <style>
-      body {
-        background-color: black;
-        color: lime;
-        font-family: monospace;
-        text-align: center;
-        padding-top: 100px;
-      }
-      a {
-        color: cyan;
-        text-decoration: none;
-        font-size: 20px;
-      }
-    </style>
-  </head>
-  <body>
-    <h1> We do divore proceedings </h1>
-    <p>you are in HELL now.</p>
-    <a href="deep.html">[ENTER]</a>
-  </body>
+<head>
+  <title>BUGSPIRAL.com</title>
+  <style>
+    body {
+      background-color: black;
+      color: #ff0033;
+      font-family: "Courier New", monospace;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      text-align: center;
+    }
+
+    h1 {
+      font-size: 48px;
+      text-shadow: 0 0 8px red;
+      margin-bottom: 10px;
+    }
+
+    p {
+      max-width: 600px;
+      font-size: 16px;
+      margin-bottom: 30px;
+      color: #ccc;
+    }
+
+    img {
+      width: 300px;
+      border: 5px solid red;
+      margin-bottom: 30px;
+      box-shadow: 0 0 20px red;
+    }
+
+    a.enter-button {
+      padding: 15px 30px;
+      background-color: #ff0033;
+      color: black;
+      font-weight: bold;
+      text-decoration: none;
+      font-size: 20px;
+      border: 2px solid white;
+      transition: 0.2s;
+    }
+
+    a.enter-button:hover {
+      background-color: black;
+      color: red;
+      border-color: red;
+      box-shadow: 0 0 10px red;
+    }
+  </style>
+</head>
+<body>
+
+  <h1>BUGSPIRAL</h1>
+  <p>
+    you are in hell now we have been open since july 4th 2025
+  </p>
+
+  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4a/Human_skull_4.png/600px-Human_skull_4.png" alt="Disturbing skull">
+
+  <a class="enter-button" href="deep.html">ENTER</a>
+
+</body>
 </html>
+
+ <a href="counter.html" style="color:rgb(246, 255, 0);">VEIW SLAVES →</a>
