--- a/BUGSPIRAL1/blackpeople2.html
+++ b/BUGSPIRAL1/blackpeople2.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>BugSpiral - Page 2</title>
+  <title>IN 5 DAYS</title>
 </head>
 <body style="font-family:monospace; background:#000000; color:#ff0000;">
   <h1>Page 2</h1>
   <p>GOD IS COMING</p>
 
   <p>
-    <a href="node1.html" style="color:rgb(68, 84, 85);">← Back</a> |
-    <a href="index.html" style="color:rgb(76, 0, 255);">Next →</a>
+    <a href="deep.html" style="color:rgb(68, 84, 85);">← Back</a> |
+    <a href="blackpeople2.html" style="color:rgb(76, 0, 255);">Next →</a>
   </p>
 </body>
 </html>
