--- a/BUGSPIRAL1/index.html
+++ b/BUGSPIRAL1/index.html
@@ -5,7 +5,7 @@
   <style>
     body {
       background-color: black;
-      color: #ff0033;
+      color: #2bff00;
       font-family: "Courier New", monospace;
       display: flex;
       flex-direction: column;
@@ -17,7 +17,7 @@
 
     h1 {
       font-size: 48px;
-      text-shadow: 0 0 8px red;
+      text-shadow: 0 0 8px rgb(141, 141, 158);
       margin-bottom: 10px;
     }
 
@@ -30,14 +30,14 @@
 
     img {
       width: 300px;
-      border: 5px solid red;
+      border: 5px solid rgb(0, 255, 42);
       margin-bottom: 30px;
-      box-shadow: 0 0 20px red;
+      box-shadow: 0 0 20px rgb(0, 0, 0);
     }
 
     a.enter-button {
       padding: 15px 30px;
-      background-color: #ff0033;
+      background-color: #11ff00;
       color: black;
       font-weight: bold;
       text-decoration: none;
@@ -48,7 +48,7 @@
 
     a.enter-button:hover {
       background-color: black;
-      color: red;
+      color: rgb(17, 0, 255);
       border-color: red;
       box-shadow: 0 0 10px red;
     }
