--- a/BUGSPIRAL1/index.html
+++ b/BUGSPIRAL1/index.html
@@ -1,71 +1,42 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>BUGSPIRAL.com</title>
+  <meta charset="UTF-8">
+  <title>WELCOME</title>
   <style>
     body {
       background-color: black;
-      color: #2bff00;
+      color: lime;
       font-family: "Courier New", monospace;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
       text-align: center;
+      padding-top: 100px;
     }
-
     h1 {
       font-size: 48px;
-      text-shadow: 0 0 8px rgb(141, 141, 158);
-      margin-bottom: 10px;
     }
-
     p {
-      max-width: 600px;
-      font-size: 16px;
-      margin-bottom: 30px;
-      color: #ccc;
-    }
-
-    img {
-      width: 300px;
-      border: 5px solid rgb(0, 255, 42);
-      margin-bottom: 30px;
-      box-shadow: 0 0 20px rgb(0, 0, 0);
-    }
-
-    a.enter-button {
-      padding: 15px 30px;
-      background-color: #11ff00;
-      color: black;
-      font-weight: bold;
-      text-decoration: none;
       font-size: 20px;
-      border: 2px solid white;
-      transition: 0.2s;
+      margin-bottom: 40px;
     }
-
-    a.enter-button:hover {
-      background-color: black;
-      color: rgb(17, 0, 255);
-      border-color: red;
-      box-shadow: 0 0 10px red;
+    .button {
+      background-color: cyan;
+      color: black;
+      padding: 12px 24px;
+      font-size: 18px;
+      margin: 10px;
+      text-decoration: none;
+      border-radius: 10px;
+      display: inline-block;
     }
   </style>
 </head>
 <body>
 
   <h1>BUGSPIRAL</h1>
-  <p>
-    you are in hell now we have been open since july 4th 2025
-  </p>
+  <p>you are in hell now, active sice july 4th 2025.</p>
 
-  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4a/Human_skull_4.png/600px-Human_skull_4.png" alt="Disturbing skull">
-
-  <a class="enter-button" href="deep.html">ENTER</a>
+  <a class="button" href="counter.html">VEIW SLAVES</a>
+  <a class="button" href="page2.html">TELL ME MORE</a>
 
 </body>
 </html>
-
- <a href="counter.html" style="color:rgb(246, 255, 0);">VEIW SLAVES →</a>
