--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body>
 
   <h1>BUGSPIRAL</h1>
-  <p>you are in hell now, active sice july 4th 2025.</p>
+  <p>You are in hell now, active sice july 4th 2025.</p>
 
   <a class="button" href="counter.html">VEIW SLAVES</a>
   <a class="button" href="page2.html">TELL ME MORE</a>
